@@ -1,4 +1,8 @@
-﻿shmuel 06.01.2015 23:42:23 +0200 - build 467
+﻿shmuel 07.01.2015 10:26:06 +0200 - build 468
+
+1. LuaFAR: добавлена функция win.OutputDebugString.
+
+shmuel 06.01.2015 23:42:23 +0200 - build 467
 
 1. Уточнение 465.1.
 
